Fixes vh inconsistency on mobile (#32) (#33)
* Attempts to fix vh problem by removing height from useViewHeight dependencies

* Separate vh solution by fixing vh calc on title and GoL to use calc

* Attempts to prevent vh movement by switching title and GoL only to regular vh

* Removes vh where possible and reorganizes styling to prevent navbar from overlapping titles at small widths

--- a/styles/components/about.module.scss
+++ b/styles/components/about.module.scss
@@ -2,7 +2,7 @@
 @use '../partials/breakpoints';
 
 .section {
-  min-height: calc(var(--vh, 1vh) * 66);
+  min-height: 38rem;
 
   > .card {
     background-color: colors.$black-pearl-lite;
