--- a/styles/components/contact.module.scss
+++ b/styles/components/contact.module.scss
@@ -4,7 +4,6 @@
 
 .section {
   padding: 10% 0;
-  min-height: calc(var(--vh, 1vh) * 100);
 
   form {
     max-width: 800px;
