--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -5,8 +5,12 @@
 .main {
   background-color: colors.$black-pearl;
 
+  .gol {
+    max-height: 100vh;
+  }
+
   .profile_container {
-    height: calc(var(--vh, 1vh) * 100);
+    height: 100vh;
 
     @media screen and (min-height: breakpoints.$x-small) {
       justify-content: center;
